# DinoGame

./: .gitignore  Makefile.am  Makefile.win  README.md  config.status  configure  configure.ac
man/: dinogame.6
src/: entities.h  errors.h  macros.h  main.c
